# dunky

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml
.github/workflows/: build-and-publish.yml  test.yml
docker/: Dockerfile.jupyter  Dockerfile.nginx  compose.yml  example.ipynb  requirements.txt
src/dunky/: __main__.py  build.py  config.py  delta.py  dunky_kernel.py  plugin.py  store.py  threading.py  unity.py
tests/: test_config.py  test_delta.py  test_dunky_kernel.py  test_plugin.py  test_store.py  test_threading.py  test_unity.py
